--- a/XNode/Scripts/Editor/XNodeEditor.asmdef
+++ b/XNode/Scripts/Editor/XNodeEditor.asmdef
@@ -1,7 +1,9 @@
 ﻿{
     "name": "XNodeEditor",
     "references": [
-        "XNode"
+        "XNode",
+        "UnityEditor.UI",
+        "UnityEngine.UI"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
