--- a/XNode/Scripts/Editor/XNodeGroups/Editor/XNode.Groups.Editor.asmdef
+++ b/XNode/Scripts/Editor/XNodeGroups/Editor/XNode.Groups.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "XNode",
         "XNodeEditor",
-        "XNode.Groups"
+        "XNode.Groups",
+        "UnityEditor.UI",
+        "UnityEngine.UI"
     ],
     "includePlatforms": [
         "Editor"
